--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app",
+    "dev": "node -r dotenv/config app"
   },
   "author": "Ayush Gupta",
   "license": "ISC",
   "dependencies": {
-    "commander": "^4.0.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.8.3"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "prettier": "^1.19.1"
   }
 }
