--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "dev": "node -r dotenv/config app"
+    "dev": "heroku local web"
   },
   "author": "Ayush Gupta",
   "license": "ISC",
@@ -15,10 +15,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.8.3"
+    "mongoose": "^5.8.3",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "prettier": "^1.19.1"
   }
 }
