--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express-session": "^1.17.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.8.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
